# Pi_deploy

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
src/fdilink_ahrs/launch/: ahrs_data.launch
src/fdilink_ahrs/src/: ahrs_driver.cpp
src/pi_12dof_release_v1/config/: urdf.rviz
src/pi_12dof_release_v1/launch/: display.launch  empth_world.launch
src/pi_12dof_release_v1/meshes/: l_ankle_roll_link.STL  r_ankle_roll_link.STL
src/pi_12dof_release_v1/urdf/: pi_12dof_release_v1.urdf  pi_12dof_release_v1_rl.urdf
src/robot_pai_controller/: CMakeLists.txt  package.xml  robot_pai_controller_plugins.xml
src/robot_pai_controller/config/: controllers.yaml  joy.yaml  robotpaicfg.yaml  robotpaicfg_422.yaml
src/robot_pai_controller/include/robot_pai_controller/: ControllerBase.h  PPOController.h  RotationTools.h
src/robot_pai_controller/launch/: joy_teleop.launch  load_controller_pai.launch
src/robot_pai_controller/policy/: policy_0908.onnx  policy_zero_jointpos.onnx
src/robot_pai_controller/scripts/: export_jit_to_onnx.py  onnx_test.py
src/robot_pai_controller/src/: ControllerBase.cpp  PPOController.cpp
src/robot_pai_hw/: CMakeLists.txt
src/robot_pai_hw/config/: 12dof_STM32H730_model_test_Orin_params.yaml  robot_deploy.rviz  robot_pai_hw.yaml
src/robot_pai_hw/include/robot_pai_hw/: RobotPaiHW.h  RobotPaiHWLoop.h
src/robot_pai_hw/include/robot_pai_hw/hardware/: lively_serial.h  motor_struct.h  serial_struct.h
src/robot_pai_hw/include/robot_pai_hw/hardware/crc/: crc8.h
src/robot_pai_hw/include/robot_pai_hw/hardware/motor/: canboard.h  canport.h  motor.h  robot.h
src/robot_pai_hw/include/robot_pai_hw/hardware_interface/: HybridJointInterface.h
src/robot_pai_hw/include/robot_pai_hw/serial/: serial.h
src/robot_pai_hw/include/robot_pai_hw/serial/impl/: unix.h  win.h
src/robot_pai_hw/launch/: robot_pai_hw.launch  test_motor_run.launch  test_reset_zero.launch
src/robot_pai_hw/src/: RobotPaiHW.cpp  RobotPaiHWLoop.cpp  RobotPaiHW_node.cpp
src/robot_pai_hw/src/hardware/: lively_serial.cc
src/robot_pai_hw/src/hardware/motor/: motor.cc
src/robot_pai_hw/src/serial/: serial.cc
src/robot_pai_hw/src/serial/impl/: unix.cc
src/robot_pai_hw/src/serial/impl/list_ports/: list_ports_linux.cc
src/robot_pai_hw/src/test/: test_motor_run.cpp  test_reset_zero.cpp
